<resources>
    <string name="app_name">CafeMidas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nec feugiat in fermentum posuere urna nec tincidunt praesent. Libero id faucibus nisl tincidunt eget. Ut morbi tincidunt augue interdum velit euismod in pellentesque. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Sit amet aliquam id diam maecenas ultricies mi eget. Netus et malesuada fames ac turpis egestas integer eget aliquet. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus. Nullam vehicula ipsum a arcu cursus vitae. Libero id faucibus nisl tincidunt eget. Sit amet nulla facilisi morbi tempus. Id neque aliquam vestibulum morbi blandit cursus. Eget dolor morbi non arcu risus.

Montes nascetur ridiculus mus mauris vitae ultricies leo integer. Pulvinar etiam non quam lacus suspendisse faucibus interdum posuere lorem. Gravida rutrum quisque non tellus orci. Sed euismod nisi porta lorem. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Sagittis eu volutpat odio facilisis mauris sit. Vulputate mi sit amet mauris commodo quis imperdiet massa. Aliquam sem et tortor consequat id. Amet commodo nulla facilisi nullam. Aliquet lectus proin nibh nisl condimentum id venenatis a condimentum. Praesent semper feugiat nibh sed pulvinar proin gravida hendrerit.

Elit at imperdiet dui accumsan. Consequat nisl vel pretium lectus quam id leo in. At erat pellentesque adipiscing commodo elit at imperdiet. Cras tincidunt lobortis feugiat vivamus at augue. Massa ultricies mi quis hendrerit dolor magna eget est. Orci porta non pulvinar neque laoreet. Mattis vulputate enim nulla aliquet porttitor. Tincidunt augue interdum velit euismod in pellentesque massa. Justo nec ultrices dui sapien eget mi. Nisl tincidunt eget nullam non. Donec pretium vulputate sapien nec sagittis aliquam malesuada bibendum arcu. In ornare quam viverra orci. Nibh mauris cursus mattis molestie a iaculis at. Lobortis elementum nibh tellus molestie nunc non blandit massa. Adipiscing commodo elit at imperdiet dui accumsan sit. Eget magna fermentum iaculis eu non. Congue mauris rhoncus aenean vel elit scelerisque mauris. In arcu cursus euismod quis viverra nibh cras.</string>

    <string name="common_id">아이디</string>
    <string name="common_password">비밀번호</string>
    <string name="common_sign_in">로그인</string>
    <string name="common_sign_up">회원가입</string>
    <string name="common_auto_sign_in">자동로그인</string>
    <string name="common_setting">설정</string>
    <string name="common_close">닫기</string>

    <string name="common_loading">로딩중…</string>
    <string name="common_search">검색</string>
    <string name="common_name">이름</string>
    <string name="common_phone">전화번호</string>
    <string name="common_visit">방문</string>
    <string name="common_recent_visit">최근 방문일</string>
    <string name="common_total_price">구매금</string>
    <string name="common_price">금액</string>
    <string name="common_money">가격</string>
    <string name="common_confirm">확인</string>
    <string name="common_edit">수정</string>
    <string name="common_cancel">취소</string>
    <string name="common_register">등록</string>
    <string name="common_memo">메모</string>
    <string name="common_sort">정렬</string>
    <string name="common_category">카테고리</string>
    <string name="common_delete">삭제</string>

    <string name="error_network">서버와의 통신에 실패했습니다. 잠시후 다시 시도해주세요.</string>
    <string name="error_common">알 수 없는 에러가 발생했습니다. 잠시후 다시 시도해주세요.</string>

    <string name="permission_dialog_title">권한 요청</string>
    <string name="permission_need_permission">권한이 필요합니다.</string>

    <string name="title_crop_image">사진 자르기</string>

    <string name="new_account_en">JOIN</string>

    <string name="format_price">%s원</string>

    <!-- 카테고리 등록 화면 -->
    <string name="empty_category">+ 버튼을 눌러\n카테고리 등록해주세요!</string>

    <string name="title_add_category">카테고리 등록</string>
    <string name="message_new_category">새로운 카테고리 등록</string>
    <string name="message_need_category_name">카테고리명을 입력해주세요</string>
    <string name="hint_new_category">새 카테고리</string>

    <string name="action_add_product">상품 추가</string>
    <string name="message_new_product">새로운 상품등록</string>
    <string name="hint_new_product">새 상품</string>
    <string name="message_error_no_input_price">금액을 입력해주세요</string>

    <!-- 고객 관리-->
    <string name="empty_user">사용자가 등록되지 않았습니다\n오른쪽 아래 버튼을 눌러 첫번째 사용자를 등록해주세요!</string>

    <string name="format_date_year_day">%d년 %d월 %d일</string>
    <string name="format_date_day">%d일 전</string>
    <string name="format_date_hour">%d시간 전</string>
    <string name="format_date_minute">%d분 전</string>
    <string name="format_date_second">%d초 전</string>
    <string name="format_date_just">방금</string>
</resources>
